tests/expected_invalid_public_phase_private_field_type.diag.out
<input>:8:23: error: public API cannot reference private type 'Hidden'
            public value: Hidden,
                          ^^^^^^
